--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+title: 籍一朝是个大帅哥
+email: 3113619807@qq.com
+author:白开
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
