--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@
 
 title: 籍一朝是个大帅哥
 email: 3113619807@qq.com
-author:白开
+author:白开233
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
